2006-11-15  Oliver Hunt  <oliver@apple.com>

        Reviewed by Anders.

        Allow <embed> and <object> tags to include non-plugin
        content when plugins are disabled

        Fixes <rdar://problems/4839488>

        * html/HTMLEmbedElement.cpp:
        (WebCore::HTMLEmbedElement::rendererIsNeeded):
        * html/HTMLObjectElement.cpp:
        (WebCore::HTMLObjectElement::rendererIsNeeded):
        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::requestObject):

2006-11-15  Adele Peterson  <adele@apple.com>

        Build fix.  Another type problem that I don't see locally.

        * rendering/RenderSlider.cpp: (WebCore::RenderSlider::setPositionFromValue):

2006-11-15  Adele Peterson  <adele@apple.com>

        Reviewed by Adam.

        Adding MathExtras header.

        * rendering/RenderSlider.cpp:

2006-11-15  Timothy Hatcher  <timothy@apple.com>

        Reviewed by Harrison.

        <rdar://problem/4832894> Crash deleting an element inside a list while deletion rectangle is visible (compareBoundaryPoints)

        * Disable and hide the deletion UI for each editing command. This prevents editing commands from being affected
          by the deletion UI elements we insert. The deletion UI is then shown after the editing commands are completely done.

        * Multiple calls to DeleteButtonController's disable() needed to be paired with the same number of enable() calls before
          the deletion UI is enabled again. This allows for nested editing commands to be called without thrashing the deletion UI.

        * Make sure the the renderers are currently reflecting the latest style changes, so call updateLayoutIgnorePendingStylesheets().

        * editing/DeleteButtonController.cpp:
        (WebCore::DeleteButtonController::DeleteButtonController):
        (WebCore::isDeletableElement):
        (WebCore::DeleteButtonController::respondToChangedSelection): check the enabled state